[package]
name = "tinrsmem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rsmem"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
udbg = { git = "https://github.com/acard0/udbg" }
once_cell = "1"
lazy_static = "1"
parking_lot = "0.12"
rust-i18n = { git = "https://github.com/acard0/rust-i18n", rev = "92cfa03", features = [ "rust-i18n-extract", "clap", "anyhow", "quote", "itertools" ] }
struct_field = { git = "https://github.com/acard0/struct_field", rev = "0b947e8" }
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }
convert_case = "0.6"
simple-logging = "2.0.2"
rayon = "1.10"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort" # Smaller panic implementation